--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"color.js": "^1.2.0",
 		"crypto-js": "^4.1.1",
+		"extract-colors": "^2.0.5",
 		"firebase": "^9.17.1",
+		"svelte-french-toast": "^1.0.3",
 		"svelte-material-icons": "^3.0.4",
 		"svelte-modals": "^1.2.1",
 		"svelte-navigator": "^3.2.2"
